fix(style): icon alignments

--- a/src/bp/ui-studio/src/web/components/Layout/Sidebar.scss
+++ b/src/bp/ui-studio/src/web/components/Layout/Sidebar.scss
@@ -41,7 +41,7 @@
 
   a {
     text-decoration: none;
-    padding: 0 15px;
+    padding: 0 12px;
 
     :global(.icon) {
       display: inline;
